--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,7 @@ description: Parser and encoder for TOML v0.4.0 (Tom's Obvious, Minimal Language
 homepage: https://github.com/just95/toml.dart
 dependencies:
   dart_config: '>=0.5.0 <0.6.0'
+  path: any
   petitparser: '>=1.3.3 <2.0.0'
 dev_dependencies:
   browser: any
