--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ dependencies:
   dart_config: '>=0.5.0 <0.6.0'
   path: any
   petitparser: '>=1.3.3 <2.0.0'
+  quiver: any
 dev_dependencies:
   browser: any
   unittest: '>=0.11.5 <0.12.0'
