--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: toml
-version: 0.2.0
+version: 0.3.0
 author: Justin Andresen <jan.dresen.95@gmail.com>
 description: Parser and encoder for TOML v0.4.0 (Tom's Obvious, Minimal Language) configuration files.
 homepage: https://github.com/just95/toml.dart
 dependencies:
   dart_config: '>=0.5.0 <0.6.0'
-  path: any
+  path: '>=1.3.4 <2.0.0'
   petitparser: '>=1.3.3 <2.0.0'
-  quiver: any
+  quiver: '>=0.21.0<0.22.0'
 dev_dependencies:
   browser: any
   unittest: '>=0.11.5 <0.12.0'
