--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,11 +3,13 @@ version: 0.3.0
 author: Justin Andresen <jan.dresen.95@gmail.com>
 description: Parser and encoder for TOML v0.4.0 (Tom's Obvious, Minimal Language) configuration files.
 homepage: https://github.com/just95/toml.dart
+environment:
+  sdk: '>=1.9.1 <2.0.0'
 dependencies:
-  path: '>=1.3.4 <2.0.0'
-  petitparser: '>=1.3.3 <2.0.0'
-  quiver: '>=0.21.0<0.22.0'
-  yaml: '>=2.1.2 <3.0.0'
+  path: '^1.3.4'
+  petitparser: '^1.3.3'
+  quiver: '^0.21.0'
+  yaml: '^2.1.2'
 dev_dependencies:
   browser: any
-  unittest: '>=0.11.5 <0.12.0'
+  unittest: '^0.11.5'
