--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: toml
 version: 0.5.1
-author: Justin Andresen <jan.dresen.95@gmail.com>
 description: Parser and encoder for TOML v0.4.0 (Tom's Obvious, Minimal Language) configuration files.
-homepage: https://github.com/just95/toml.dart
+repository: https://github.com/just95/toml.dart
 environment:
   sdk: '>=2.7.0 <3.0.0'
 dependencies:
