--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,3 +1,7 @@
+include: package:pedantic/analysis_options.1.9.0.yaml
+
 analyzer:
+  exclude:
+    - 'example/**'
   strong-mode:
     implicit-casts: false
