Add analysis options file to examples

--- a/example/http_config_loader/pubspec.yaml
+++ b/example/http_config_loader/pubspec.yaml
@@ -12,3 +12,5 @@ dev_dependencies:
   # See also https://dart.dev/tools/webdev#depending-on-build_-packages.
   build_runner: any
   build_web_compilers: any
+  # Dependencies for `dartanalyzer`.
+  pedantic: ^1.9.0
