--- a/example/toml_parser/pubspec.yaml
+++ b/example/toml_parser/pubspec.yaml
@@ -5,6 +5,7 @@ publish_to: none
 environment:
   sdk: '>=2.7.0 <3.0.0'
 dependencies:
-  pedantic: ^1.9.0
   toml:
     path: ../../
+dev_dependencies:
+    pedantic: ^1.9.2
