--- a/example/flutter_example/analysis_options.yaml
+++ b/example/flutter_example/analysis_options.yaml
@@ -3,3 +3,7 @@ include: package:pedantic/analysis_options.1.9.0.yaml
 analyzer:
   strong-mode:
     implicit-casts: false
+
+linter:
+  rules:
+    - directives_ordering
