--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,7 +61,7 @@ jobs:
       image: google/dart:${{ matrix.dart-version }}
     strategy:
       matrix:
-        dart-version: [2.7, 2.8, 2.9, 2.10, latest]
+        dart-version: ['2.7', '2.8', '2.9', '2.10', latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
