--- a/example/http_config_loader/pubspec.yaml
+++ b/example/http_config_loader/pubspec.yaml
@@ -14,3 +14,6 @@ dev_dependencies:
   build_web_compilers: any
   # Dependencies for `dartanalyzer`.
   pedantic: ^1.9.2
+  # Dependencies for continuous integration.
+  webdriver: any
+  http_server: any
