--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -81,7 +81,9 @@ jobs:
       - name: Print Dart SDK Version
         run: dart --version
       - name: Install webdev
-        run: dart pub global activate webdev
+        run: |
+          export PATH="$PATH":"$HOME/.pub-cache/bin"
+          dart pub global activate webdev
       - name: Build Web Examples
         run: ./tool/build-web-examples.sh
       - name: Run Tests of Web Examples
