--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -77,7 +77,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Use Dart SDK
-        uses: vanesyan/setup-dart@v1
+        uses: dart-lang/setup-dart@v1
       - name: Print Dart SDK Version
         run: dart --version
       - name: Add Executables Installed by Pub to PATH
